--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
-		<title>amy.coffee │ root@amy</title>
+		<title>llameow.github.io │ root@llameow</title>
 		<link href="css/css.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<meta property="og:title" content="Amy#1000 | The One and Only">
-		<meta property="og:description" content="If you are reading this, you are a confirmed sex offender">
+		<meta property="og:title" content="llameow#9734 | i stole your cat">
+		<meta property="og:description" content="sup ctrl+u user">
 		<link rel="icon" type="image/ico" href="kekw.ico">
 		<script src="js/jQuery.js"></script>
 	</head>
@@ -16,12 +16,13 @@
 		  </audio>
 		  <center>
 		  <div style="position:absolute; margin-top: 90px; top:0; right:0; bottom:0; left:0;" id="art">
-		        <pre>    ██╗ ██╗ █████╗ ███╗   ███╗██╗   ██╗
-   ██╔╝██╔╝██╔══██╗████╗ ████║╚██╗ ██╔╝
-  ██╔╝██╔╝ ███████║██╔████╔██║ ╚████╔╝ 
- ██╔╝██╔╝  ██╔══██║██║╚██╔╝██║  ╚██╔╝  
-██╔╝██╔╝   ██║  ██║██║ ╚═╝ ██║   ██║   
-╚═╝ ╚═╝    ╚═╝  ╚═╝╚═╝     ╚═╝   ╚═╝   
+		        <pre>    
+██╗░░░░░██╗░░░░░░█████╗░███╗░░░███╗███████╗░█████╗░░██╗░░░░░░░██╗
+██║░░░░░██║░░░░░██╔══██╗████╗░████║██╔════╝██╔══██╗░██║░░██╗░░██║
+██║░░░░░██║░░░░░███████║██╔████╔██║█████╗░░██║░░██║░╚██╗████╗██╔╝
+██║░░░░░██║░░░░░██╔══██║██║╚██╔╝██║██╔══╝░░██║░░██║░░████╔═████║░
+███████╗███████╗██║░░██║██║░╚═╝░██║███████╗╚█████╔╝░░╚██╔╝░╚██╔╝░
+╚══════╝╚══════╝╚═╝░░╚═╝╚═╝░░░░░╚═╝╚══════╝░╚════╝░░░░╚═╝░░░╚═╝░░
                                        
 
 															
@@ -34,10 +35,10 @@
 		   mensaje=
 		  '<br><br><br><center><ul class="nav"><li><a href="index.html">//main</a></li></ul><br>'+
            '<p><font color="#FFFFFF">+</font><b class="blu">=======================================================</b><font color="#FFFFFF">+</font><br><br>'+
-		  '<a href="https://github.com/amy1337" target="_blank" style="text-decoration:none; color:#196ef7;">//github</a><br><br>'+
-		  '<a href="https://twitch.tv/puja" target="_blank" style="text-decoration:none; color:#7b00ff;">//twitch</a><br><br>'+
-          '<a href="https://discord.com/users/99899688517390336" target="_blank" style="text-decoration:none; color:#fffb00;">//discord</a><br><br>'+
-		  '<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" style="text-decoration:none; color:#00ff0d;">//instagram</a><br><br>'+
+		  '<a href="https://github.com/llameow" target="_blank" style="text-decoration:none; color:#196ef7;">github</a><br><br>'+
+		  '<a href="https://www.youtube.com/channel/UCh6scSxapeyPCfAljYWco9w" target="_blank" style="text-decoration:none; color:#7b00ff;">youtube</a><br><br>'+
+          '<a href="https://discord.com/users/443287359425871872" target="_blank" style="text-decoration:none; color:#fffb00;">//discord</a><br><br>'+
+		  '<a href="https://www.youtube.com/watch?v=9hhMUT2U2L4" target="_blank" style="text-decoration:none; color:#00ff0d;">onlyfans</a><br><br>'+
 		  '<font color="#FFFFFF">+</font><b class="blu">=======================================================</b><font color="#FFFFFF">+</font><br><br></p>';
 		  line=0;
 		  cursor='_';
