--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
-		<title>@llameow │ mo</title>
+		<title>@llameow │ moo</title>
 		<link href="css/css.css" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<meta property="og:title" content="sup nuggetnose">
