--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			Your browser does not support the <code>audio</code> element.
 		  </audio>
 		  <center>
-		  <div style="position:absolute; margin-top: 90px; top:0; right:0; bottom:0; left:0;" id="art">
+		  <div style="text-align:center; position:absolute; margin-top: 90px; top:0; right:0; bottom:0; left:0;" id="art">
 		        <pre>    
      ___       ___       ___           ___           ___           ___           ___     
     /\__\     /\__\     /\  \         /\__\         /\  \         /\  \         /\__\    
